@@ -1,3 +1,9 @@
+Tue Jun  7 09:50:07 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* libgamin/Makefile.am server/Makefile.am: applied patch from
+	  Neal H. Walfield to build outside of the source directory,
+	  closes #306702
+
 Thu May 26 15:53:19 CEST 2005 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_inotify.c: applied patch from John McCutchan fixing
